// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageValidator shows a validator profile information errors signing info is missing 1`] = `
<tmpage-stub
  data-title="Validator"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <apolloquery
      query="[object Object]"
      variables="[object Object]"
    />
     
    <delegationmodal-stub
      denom="STAKE"
      fromoptions="[object Object]"
      to="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw"
      validator="[object Object]"
    />
     
    <undelegationmodal-stub
      denom="STAKE"
      maximum="0"
      to="cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9"
      validator="[object Object]"
    />
  </template>
</tmpage-stub>
`;

exports[`PageValidator shows a validator profile information if user has signed in 1`] = `
<tmpage-stub
  data-title="Validator"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <apolloquery
      query="[object Object]"
      variables="[object Object]"
    />
     
    <delegationmodal-stub
      denom="STAKE"
      fromoptions="[object Object]"
      to="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw"
      validator="[object Object]"
    />
     
    <undelegationmodal-stub
      denom="STAKE"
      maximum="0"
      to="cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9"
      validator="[object Object]"
    />
  </template>
</tmpage-stub>
`;

exports[`PageValidator shows a validator profile information if user hasn't signed in 1`] = `
<tmpage-stub
  data-title="Validator"
  loaded="true"
  managed="true"
  subtitle=""
  title=""
>
  <template>
    <apolloquery
      query="[object Object]"
      variables="[object Object]"
    />
     
    <delegationmodal-stub
      denom="STAKE"
      fromoptions=""
      to="cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctqzh8yqw"
      validator="[object Object]"
    />
     
    <undelegationmodal-stub
      denom="STAKE"
      maximum="0"
      to=""
      validator="[object Object]"
    />
  </template>
</tmpage-stub>
`;

exports[`PageValidator shows a validator profile information shows a validator as an inactive candidate if he has no voting_power 1`] = `"This validator does not have enough voting power yet and is inactive"`;

exports[`PageValidator shows a validator profile information shows that a validator is jailed 1`] = `"This validator has been jailed and is not currently validating"`;

exports[`delegationTargetOptions always shows wallet in the first position 1`] = `
Array [
  Object {
    "address": "cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
    "key": "My Wallet - cosmos…3p4mqpjyrm5ctpesxxn9",
    "maximum": 1337,
    "value": 0,
  },
]
`;

exports[`delegationTargetOptions hides displayed validator if bonded 1`] = `
Array [
  Object {
    "address": "cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
    "key": "My Wallet - cosmos…3p4mqpjyrm5ctpesxxn9",
    "maximum": 1337,
    "value": 0,
  },
]
`;

exports[`delegationTargetOptions shows bonded validators for redelegation options 1`] = `
Array [
  Object {
    "address": "cosmos15ky9du8a2wlstz6fpx3p4mqpjyrm5ctpesxxn9",
    "key": "My Wallet - cosmos…3p4mqpjyrm5ctpesxxn9",
    "maximum": 1337,
    "value": 0,
  },
  Object {
    "address": "cosmosvaladdr15ky9du8a2wlstz6fpx3p4mqpjyrm5ctplpn3au",
    "key": "good_greg - cosmosvaladdr…3p4mqpjyrm5ctplpn3au",
    "maximum": 5,
    "value": 1,
  },
]
`;
